@@ -35,15 +35,15 @@ foo3 x/*0:1*/ = bar/*0*/ with bar y/*0:1*/ = bar/*1*/ (y/*0:1*/+1) if y/*0:1*/==
 foo 99;
 99
 foo2 99;
-{{closure bar}} 100
+#<closure bar> 100
 foo2 98;
-{{closure bar}} 98
+#<closure bar> 98
 foo3 99;
-{{closure bar}}
+#<closure bar>
 foo3 99 98;
-{{closure bar}} 98
+#<closure bar> 98
 foo3 99 99;
-{{closure bar}} 100
+#<closure bar> 100
 loop = loop;
 count n/*0:1*/ = ct/*0*/ n/*0:1*/ with ct n/*0:1*/::int = n/*0:1*/ if n/*0:1*/<=0; ct n/*0:1*/::int = ct/*1*/ (n/*0:1*/-1) {
   rule #0: ct n::int = n if n<=0
