@@ -1,5 +1,10 @@
 2008-09-05  Albert Graef  <Dr.Graef@t-online.de>
 
+	* printer.cc: Changed <<...>> syntax for "external" objects such
+	as closures, thunks and pointers to #<...> syntax pilfered from
+	Scheme. This is less likely to be mistaken for a valid Pure
+	expression.
+
 	* pure.cc, lexer.ll: Renamed the interactive 'list' command to
 	'show', as suggested by John Cowan. This hopefully puts an end to
 	inadvertent execution of that command, since 'show' is no prelude
